--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,10 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-- trigger:
+trigger:
 - main
 
-- pool:
+pool:
   vmImage: ubuntu-latest
 
 steps:
